# Bacchus

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/bacchus/: app.hpp  assert.hpp  buttons.hpp  core.hpp  keys.hpp  layer.hpp  layer_stack.hpp  log.hpp  window.hpp
include/bacchus/events/: event.hpp  key_event.hpp  mouse_event.hpp  window_event.hpp
include/bacchus/renderer/: buffer.hpp  context.hpp  render_command.hpp  renderer.hpp  renderer_api.hpp  shader.hpp  shader_program.hpp  vertex_array.hpp
platform/glfw/: glfw_window.cpp  glfw_window.hpp
platform/opengl/: opengl_buffer.cpp  opengl_buffer.hpp  opengl_context.cpp  opengl_context.hpp  opengl_renderer_api.cpp  opengl_renderer_api.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_shader_program.cpp  opengl_shader_program.hpp  opengl_vertex_array.cpp  opengl_vertex_array.hpp
src/: app.cpp  layer_stack.cpp  log.cpp
src/renderer/: buffer.cpp  context.cpp  render_command.cpp  renderer.cpp  renderer_api.cpp  shader.cpp  shader_program.cpp  vertex_array.cpp
test/: CMakeLists.txt  demo.cpp
